<resources>
    <string name="app_name">WeatherProject</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="selectlang">Select Languague</string>
    <string name="tempunit">Temperature Unit</string>
    <string name="locationsrc">Location Source</string>
    <string name="windspeedunit">Wind Speed Unit</string>
    <string name="setting">Settings</string>
    <string name="to">Select Location</string>
    <string name="from">Time</string>
    <string name="nottime">Notification time</string>
    <string name="notfor">Notification For</string>

    <string name="notifyby">Notify Me By\n</string>

    <string-array name="language_entries">
        <item>Arabic</item>
        <item>English</item>
        <item>Romanian</item>
        <item>Default</item>
    </string-array>
    <string-array name="language_values">
        <item>ar</item>
        <item>en</item>
        <item>ro</item>
        <item>def</item>
    </string-array>

    <string-array name="temp_unit_entries">
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="temp_unit_values">
        <item>celsius</item>
        <item>kelvin</item>
        <item>fahrenheit</item>
    </string-array>

    <string-array name="location_entries">
        <item>GPS</item>
        <item>Map</item>
    </string-array>
    <string-array name="location_values">
        <item>gps</item>
        <item>map</item>
    </string-array>

    <string-array name="wind_speed_entries">
        <item>Meter/sec</item>
        <item>Kilometer/hour</item>
    </string-array>
    <string-array name="wind_speed_values">
        <item>meter_sec</item>
        <item>mile_hour</item>
    </string-array>

    <string name="google_maps_key">AIzaSyAQCz8DFn3w2ViFKcct5DVVtexJv6bS7M8</string>
    <string name="search">Search By City Name</string>
    <string name="notification">Notification</string>
    <string name="add">Add</string>
    <string name="alarm">Alarm</string>

</resources>