<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingBottom="80dp"
    tools:context=".navbar.ui.home.view.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/bgimage"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:scaleType="fitXY"
            android:src="@drawable/cloud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.matteobattilana.weather.WeatherView
            android:id="@+id/weatherView"
            android:layout_width="407dp"
            android:layout_height="693dp"
            app:layout_constraintBottom_toBottomOf="@id/bgimage"
            app:layout_constraintEnd_toEndOf="@id/bgimage"
            app:layout_constraintStart_toStartOf="@id/bgimage"
            app:layout_constraintTop_toTopOf="@id/bgimage">

        </com.github.matteobattilana.weather.WeatherView>

        <androidx.cardview.widget.CardView
            android:id="@+id/weeklydetails"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="#70000000"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const5Day"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/datetoday">

                    <eightbitlab.com.blurview.BlurView
                        android:id="@+id/blueView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:visibility="visible">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/forecastView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </eightbitlab.com.blurview.BlurView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/datetoday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/Today"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.45"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Saturday"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/datetime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.55"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="17-12-2001 10:34:22"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="14sp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/citytxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="-"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /><![CDATA[

        />

        ]]>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bgimage"
            app:layout_constraintTop_toTopOf="@+id/bgimage" />


        <androidx.cardview.widget.CardView
            android:id="@+id/detailCard"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="#70000000"
            app:cardCornerRadius="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/citytxt">

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/blueViewThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />


            <LinearLayout
                android:id="@+id/tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datetime">

                <TextView
                    android:id="@+id/currentTempTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/arrow_up" />

                    <TextView
                        android:id="@+id/MaxTemotext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:shadowColor="@color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="3"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/MinTempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="@color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="3"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"

                        app:srcCompat="@drawable/arrow_down" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="-5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.14"
                        android:gravity="bottom"
                        android:orientation="vertical"
                        android:paddingStart="15dp">

                        <ImageView
                            android:id="@+id/windimage"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal"
                            app:srcCompat="@drawable/wind" />

                        <TextView
                            android:id="@+id/Windtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-Km"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/WindValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/wind"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:src="@drawable/sunny" />

                        <TextView
                            android:id="@+id/statustxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.14"
                        android:gravity="bottom|center_horizontal"
                        android:orientation="vertical"
                        android:paddingEnd="15dp">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_horizontal"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/humidityUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/Wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.3333"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pressureimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/baroo" />

                <TextView
                    android:id="@+id/PressureValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-hpa"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pressure"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
